header now behaves correctly on small screens

--- a/src/assets/css/components/header.scss
+++ b/src/assets/css/components/header.scss
@@ -5,7 +5,7 @@
 
 .nav-branding {
   .logo {
-    @include border-layout-solid;
+    //@include border-layout-solid;
 
     svg {
       max-height: 100%;
