--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -68,7 +68,7 @@ header {
   transform: translateX(-50%);
   z-index: 10;
 
-  background-color: white;
+  background: white;
 
   h1 {
     display: none;
